@@ -1,5 +1,8 @@
 Changelog for Miosix np embedded OS
 
+- Reworked logging.h to decrease code size.
+- Moving from mallinfo() to _mallinfo_r() in getCurrentFreeHeap() to avoid
+  accidentally bringing in iprintf(), which increases code size.
 - Added RCC_SYNC() macro to all stm32 BSPs to workaround an errata in the
   stm32f42x requiring additional cycles to enable clock gating. From now on
   it is suggested to add an RCC_SYNC() after every access to the RCC to
